# etcpak

./: .gitignore  Bitmap.cpp  Bitmap.hpp  BlockData.cpp  CMakeLists.txt  ProcessDxtc.cpp  ProcessRGB.cpp  TaskDispatch.cpp
telescopetc/: BlockDataPublic.cpp  BlockDataPublic.hpp  CMakeLists.txt  README.md  main.c  makefile  telescopetc  wrapper.cpp  wrapper.h
telescopetc/debug/: original.txt  originaltest.txt  ourone.txt  test.txt
telescopetc/include/: BlockDataPublic.hpp  ttc_wrapper.h  wrapper.h
telescopetc/src/: BlockDataPublic.cpp  ttc_wrapper.cpp  wrapper.cpp
